Fixed nav dropdown z-index issue

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,6 +2,8 @@
 // Header
 
 #header {
+  position: relative;
+  z-index: 10;
   min-height: 100px;
   @media (min-width: $xl) {
     padding-top: 14px;
